# mi-lens

./: .gitignore  .gitmodules  LICENSE  README.md  environment.yml  pyproject.toml
configs/: README.md  flexlens_flexdanish_8x7b_a4_55b_v2.json
configs/capture/: apertus_base_da_eval.json  apertus_base_en_eval.json  apertus_danish_da_eval.json  apertus_danish_en_eval.json  mistral_base_da_eval.json  mistral_base_en_eval.json  mistral_danish_da_eval.json  mistral_danish_en_eval.json  qwen_base_da_eval.json  qwen_base_en_eval.json  qwen_danish_da_eval.json  qwen_danish_en_eval.json
configs/compatibility/: apertus_base.json  apertus_danish.json  flexdanish_55b_bf16.json  mistral_base.json  mistral_danish.json  qwen_base.json  qwen_danish.json
configs/jlens_fit/: apertus_base_da_trainfit.json  apertus_base_en_trainfit.json  apertus_danish_da_trainfit.json  apertus_danish_en_trainfit.json  mistral_base_da_trainfit.json  mistral_base_en_trainfit.json  mistral_danish_da_trainfit.json  mistral_danish_en_trainfit.json  qwen_base_da_trainfit.json  qwen_base_en_trainfit.json  qwen_danish_da_trainfit.json  qwen_danish_en_trainfit.json
configs/models/: flexmore_ucloud.json
configs/routerinterp/: analyze_example.json  analyze_routerinterp_olmoe_protocol.json  (+5 more)
data/: registry.json
lenses/: __init__.py
metadata/: README.md  expert_labels.flex_danish.json  expert_labels.flex_more.json
notebooks/: fitting_the_jlens.ipynb  fuzze_trace_application.ipynb  lens_diff_interactive_widget.ipynb  load_data.ipynb  train_tuned_lens.ipynb
scripts/: capture_flexlens.py  install_environment.sh  plan.txt
(+140 files in other folders)
